--- a/data/INIT/init_mba.ipynb
+++ b/data/INIT/init_mba.ipynb
@@ -1112,7 +1112,7 @@
        "      <th>4</th>\n",
        "      <td>ADES FRUT DNO 200 ML 40 PK</td>\n",
        "      <td>[-56.35672, 0.0, 0.0]</td>\n",
-       "      <td>BAJISTA</td>\n",
+       "      <td>A LA BAJA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1148,7 +1148,7 @@
        "      <th>571</th>\n",
        "      <td>ZERO ULTRA 473ML 4PK</td>\n",
        "      <td>[25.333308000000006, -17.999982000000003, -10....</td>\n",
-       "      <td>BAJISTA</td>\n",
+       "      <td>A LA BAJA</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1174,13 +1174,13 @@
        "1      [2015.385986, -662.5664259999999, -85.29625600...        ALCISTA  \n",
        "2                  [0.0, 3837.334512, 6738.829137000001]        ALCISTA  \n",
        "3         [1597.535482, -952.95186, -134.11209000000008]        ALCISTA  \n",
-       "4                                  [-56.35672, 0.0, 0.0]        BAJISTA  \n",
+       "4                                  [-56.35672, 0.0, 0.0]      A LA BAJA  \n",
        "..                                                   ...            ...  \n",
        "567    [162.20207899999514, 6393.279318000001, 3039.5...        ALCISTA  \n",
        "568    [2952.912959999998, 4039.9272960000017, 4630.5...        ALCISTA  \n",
        "569    [786.1758719999998, 112.0089280000011, 1527.97...        ALCISTA  \n",
        "570                               [453.0, 639.0, 1881.0]        ALCISTA  \n",
-       "571    [25.333308000000006, -17.999982000000003, -10....        BAJISTA  \n",
+       "571    [25.333308000000006, -17.999982000000003, -10....      A LA BAJA  \n",
        "\n",
        "[572 rows x 3 columns]"
       ]
@@ -1213,7 +1213,7 @@
     "    elif val == 0:\n",
     "        return 'ESTABLE'\n",
     "    elif val < 0:\n",
-    "        return 'BAJISTA'\n",
+    "        return 'A LA BAJA'\n",
     "    else:\n",
     "        return \"\"\n",
     "    \n",
@@ -1282,7 +1282,7 @@
        "      <th>4</th>\n",
        "      <td>ADES FRUT DNO 200 ML 40 PK</td>\n",
        "      <td>[-56.35672, 0.0, 0.0]</td>\n",
-       "      <td>BAJISTA</td>\n",
+       "      <td>A LA BAJA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1318,7 +1318,7 @@
        "      <th>571</th>\n",
        "      <td>ZERO ULTRA 473ML 4PK</td>\n",
        "      <td>[25.333308000000006, -17.999982000000003, -10....</td>\n",
-       "      <td>BAJISTA</td>\n",
+       "      <td>A LA BAJA</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1339,18 +1339,18 @@
        "570          YOLI LIMON VRET 355ML 24 PACK   \n",
        "571                   ZERO ULTRA 473ML 4PK   \n",
        "\n",
-       "                                             tendencia     tipo  \n",
-       "0                                      [0.0, 0.0, 0.0]  ESTABLE  \n",
-       "1    [2015.385986, -662.5664259999999, -85.29625600...  ALCISTA  \n",
-       "2                [0.0, 3837.334512, 6738.829137000001]  ALCISTA  \n",
-       "3       [1597.535482, -952.95186, -134.11209000000008]  ALCISTA  \n",
-       "4                                [-56.35672, 0.0, 0.0]  BAJISTA  \n",
-       "..                                                 ...      ...  \n",
-       "567  [162.20207899999514, 6393.279318000001, 3039.5...  ALCISTA  \n",
-       "568  [2952.912959999998, 4039.9272960000017, 4630.5...  ALCISTA  \n",
-       "569  [786.1758719999998, 112.0089280000011, 1527.97...  ALCISTA  \n",
-       "570                             [453.0, 639.0, 1881.0]  ALCISTA  \n",
-       "571  [25.333308000000006, -17.999982000000003, -10....  BAJISTA  \n",
+       "                                             tendencia       tipo  \n",
+       "0                                      [0.0, 0.0, 0.0]    ESTABLE  \n",
+       "1    [2015.385986, -662.5664259999999, -85.29625600...    ALCISTA  \n",
+       "2                [0.0, 3837.334512, 6738.829137000001]    ALCISTA  \n",
+       "3       [1597.535482, -952.95186, -134.11209000000008]    ALCISTA  \n",
+       "4                                [-56.35672, 0.0, 0.0]  A LA BAJA  \n",
+       "..                                                 ...        ...  \n",
+       "567  [162.20207899999514, 6393.279318000001, 3039.5...    ALCISTA  \n",
+       "568  [2952.912959999998, 4039.9272960000017, 4630.5...    ALCISTA  \n",
+       "569  [786.1758719999998, 112.0089280000011, 1527.97...    ALCISTA  \n",
+       "570                             [453.0, 639.0, 1881.0]    ALCISTA  \n",
+       "571  [25.333308000000006, -17.999982000000003, -10....  A LA BAJA  \n",
        "\n",
        "[572 rows x 3 columns]"
       ]
@@ -1829,7 +1829,7 @@
        "      <td>9.669178e+07</td>\n",
        "      <td>ALTA VENTA</td>\n",
        "      <td>[7044.215077999999, -8453.519119999999, 671.58...</td>\n",
-       "      <td>BAJISTA</td>\n",
+       "      <td>A LA BAJA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1837,7 +1837,7 @@
        "      <td>1.215638e+06</td>\n",
        "      <td>BAJA VENTA</td>\n",
        "      <td>[-1403.4763080000002, -99.96269999999998, -39....</td>\n",
-       "      <td>BAJISTA</td>\n",
+       "      <td>A LA BAJA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1853,7 +1853,7 @@
        "      <td>1.631344e+08</td>\n",
        "      <td>ALTA VENTA</td>\n",
        "      <td>[-920.3839990000015, -6490.885453999999, -4282...</td>\n",
-       "      <td>BAJISTA</td>\n",
+       "      <td>A LA BAJA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>372</th>\n",
@@ -1861,7 +1861,7 @@
        "      <td>2.162924e+08</td>\n",
        "      <td>ALTA VENTA</td>\n",
        "      <td>[2802.010312999999, -8858.288719999997, -4143....</td>\n",
-       "      <td>BAJISTA</td>\n",
+       "      <td>A LA BAJA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>373</th>\n",
@@ -1885,7 +1885,7 @@
        "      <td>1.034785e+06</td>\n",
        "      <td>BAJA VENTA</td>\n",
        "      <td>[25.333308000000006, -17.999982000000003, -10....</td>\n",
-       "      <td>BAJISTA</td>\n",
+       "      <td>A LA BAJA</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1906,18 +1906,18 @@
        "374      YOLI LIMON BOT 600L NR 12PK  8.554939e+08  MUY ALTA VENTA   \n",
        "375             ZERO ULTRA 473ML 4PK  1.034785e+06      BAJA VENTA   \n",
        "\n",
-       "                                             tendencia     tipo  \n",
-       "0                [0.0, 3837.334512, 6738.829137000001]  ALCISTA  \n",
-       "1    [1319.5076400000003, -859.6792200000004, 4548....  ALCISTA  \n",
-       "2       [2375.43912, -740.810136, -1170.2489519999997]  ALCISTA  \n",
-       "3    [7044.215077999999, -8453.519119999999, 671.58...  BAJISTA  \n",
-       "4    [-1403.4763080000002, -99.96269999999998, -39....  BAJISTA  \n",
-       "..                                                 ...      ...  \n",
-       "371  [-920.3839990000015, -6490.885453999999, -4282...  BAJISTA  \n",
-       "372  [2802.010312999999, -8858.288719999997, -4143....  BAJISTA  \n",
-       "373  [2378.25274, 819.9899850000002, 1713.243679999...  ALCISTA  \n",
-       "374  [162.20207899999514, 6393.279318000001, 3039.5...  ALCISTA  \n",
-       "375  [25.333308000000006, -17.999982000000003, -10....  BAJISTA  \n",
+       "                                             tendencia       tipo  \n",
+       "0                [0.0, 3837.334512, 6738.829137000001]    ALCISTA  \n",
+       "1    [1319.5076400000003, -859.6792200000004, 4548....    ALCISTA  \n",
+       "2       [2375.43912, -740.810136, -1170.2489519999997]    ALCISTA  \n",
+       "3    [7044.215077999999, -8453.519119999999, 671.58...  A LA BAJA  \n",
+       "4    [-1403.4763080000002, -99.96269999999998, -39....  A LA BAJA  \n",
+       "..                                                 ...        ...  \n",
+       "371  [-920.3839990000015, -6490.885453999999, -4282...  A LA BAJA  \n",
+       "372  [2802.010312999999, -8858.288719999997, -4143....  A LA BAJA  \n",
+       "373  [2378.25274, 819.9899850000002, 1713.243679999...    ALCISTA  \n",
+       "374  [162.20207899999514, 6393.279318000001, 3039.5...    ALCISTA  \n",
+       "375  [25.333308000000006, -17.999982000000003, -10....  A LA BAJA  \n",
        "\n",
        "[376 rows x 5 columns]"
       ]
@@ -2021,7 +2021,7 @@
        "      <td>3.279004e+07</td>\n",
        "      <td>0.942028</td>\n",
        "      <td>MUY ALTA VENTA</td>\n",
-       "      <td>BAJISTA</td>\n",
+       "      <td>A LA BAJA</td>\n",
        "      <td>[1529131.292913001, -1384941.344742, -528984.2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2053,7 +2053,7 @@
        "      <td>3.851277e+06</td>\n",
        "      <td>0.938132</td>\n",
        "      <td>MUY ALTA VENTA</td>\n",
-       "      <td>BAJISTA</td>\n",
+       "      <td>A LA BAJA</td>\n",
        "      <td>[-13019.762717999984, -78676.821337, 90035.502...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2149,7 +2149,7 @@
        "      <td>1.141223e+01</td>\n",
        "      <td>0.111111</td>\n",
        "      <td>MUY ALTA VENTA</td>\n",
-       "      <td>BAJISTA</td>\n",
+       "      <td>A LA BAJA</td>\n",
        "      <td>[5974.304499000005, 13784.708109, -29925.95251...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2184,18 +2184,18 @@
        "2486380  VDM ORIENTE                       OTROS  PLATA  0.000000    0.000000   \n",
        "2486381  VDM ORIENTE                       OTROS  PLATA  0.000000    0.000000   \n",
        "\n",
-       "              sales_a       sales_b  support_b      category_b     tipo  \\\n",
-       "0        2.874746e+07  1.011189e+07   0.968859  MUY ALTA VENTA  ALCISTA   \n",
-       "1        2.874746e+07  2.351121e+07   0.960842  MUY ALTA VENTA  ALCISTA   \n",
-       "2        2.874746e+07  3.279004e+07   0.942028  MUY ALTA VENTA  BAJISTA   \n",
-       "3        2.874746e+07  1.115415e+07   0.941635  MUY ALTA VENTA  ALCISTA   \n",
-       "4        2.874746e+07  3.851277e+06   0.938132  MUY ALTA VENTA  BAJISTA   \n",
-       "...               ...           ...        ...             ...      ...   \n",
-       "2486370  1.141223e+01  1.408918e+01   0.111111  MUY ALTA VENTA  ALCISTA   \n",
-       "2486371  1.056688e+02  1.408918e+01   0.111111  MUY ALTA VENTA  ALCISTA   \n",
-       "2486379  1.141223e+01  6.664180e-01   0.111111      ALTA VENTA  ALCISTA   \n",
-       "2486380  1.056688e+02  6.664180e-01   0.111111      ALTA VENTA  ALCISTA   \n",
-       "2486381  1.056688e+02  1.141223e+01   0.111111  MUY ALTA VENTA  BAJISTA   \n",
+       "              sales_a       sales_b  support_b      category_b       tipo  \\\n",
+       "0        2.874746e+07  1.011189e+07   0.968859  MUY ALTA VENTA    ALCISTA   \n",
+       "1        2.874746e+07  2.351121e+07   0.960842  MUY ALTA VENTA    ALCISTA   \n",
+       "2        2.874746e+07  3.279004e+07   0.942028  MUY ALTA VENTA  A LA BAJA   \n",
+       "3        2.874746e+07  1.115415e+07   0.941635  MUY ALTA VENTA    ALCISTA   \n",
+       "4        2.874746e+07  3.851277e+06   0.938132  MUY ALTA VENTA  A LA BAJA   \n",
+       "...               ...           ...        ...             ...        ...   \n",
+       "2486370  1.141223e+01  1.408918e+01   0.111111  MUY ALTA VENTA    ALCISTA   \n",
+       "2486371  1.056688e+02  1.408918e+01   0.111111  MUY ALTA VENTA    ALCISTA   \n",
+       "2486379  1.141223e+01  6.664180e-01   0.111111      ALTA VENTA    ALCISTA   \n",
+       "2486380  1.056688e+02  6.664180e-01   0.111111      ALTA VENTA    ALCISTA   \n",
+       "2486381  1.056688e+02  1.141223e+01   0.111111  MUY ALTA VENTA  A LA BAJA   \n",
        "\n",
        "                                                 tendencia  \n",
        "0        [653824.9432499995, -113964.11999999918, 29578...  \n",
@@ -2254,7 +2254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
